// MADE TO CHECK HOW IT ALL WORKS AND TRY TO IMPLEMENT THAT SMALL MICROSERVICE
syntax = "proto3";

option go_package = "wrt-hello.v1";

service HelloService {
  rpc SayHello(SayRequest) returns(SayResponse);
}

message SayRequest {
  string name = 1;
}

message SayResponse {
  string message = 1;
}